horizontal scroll fix

--- a/source/less/blocks/collaborate.less
+++ b/source/less/blocks/collaborate.less
@@ -77,7 +77,7 @@
 
   .collaborate__container {
     padding-top: 62px;
-    padding-bottom: 56px;
+    padding-bottom: 58px;
     padding-left: 31px;
     padding-right: 110px;
   }
@@ -122,7 +122,7 @@
 
   .collaborate__box {
     position: relative;
-    width: @desktop-width;
+    width: 1200px;
     margin: 0 auto;
   }
 
