--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -24,7 +24,7 @@
   .copyright__name {
     font-size: 16px;
     line-height: 16px;
-    margin-top: 10px;
+    margin-top: 5px;
     margin-left: -1px;
   }
 }
