--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -53,7 +53,7 @@
   .footer__link {
     display: inline-block;
     padding-left: 2px;
-    margin-top: 33px;
+    margin-top: 27px;
     margin-bottom: 29px;
   }
 
