--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -354,12 +354,14 @@
 
 .form__button {
   margin-bottom: 19px;
+  letter-spacing: 1px;
 }
 /*---------------------------------------------------------*/
 @media (min-width: @tablet-width) {
   .form__title {
     font-size: 60px;
-    margin-bottom: 49px;
+    margin-top: 21px;
+    margin-bottom: 52px;
   }
 
   .form__container {
@@ -408,7 +410,7 @@
     width: 325px;
     font-size: 20px;
     line-height: 30px;
-    margin-bottom: 62px;
+    margin-bottom: 65px;
   }
 
   .form__contacts {
@@ -439,13 +441,13 @@
   }
 
   .form__inputs {
-    margin-bottom: 40px;
+    margin-bottom: 55px;
   }
 
   .form__input {
     font-size: 20px;
-    padding-top: 17px;
-    padding-bottom: 15px;
+    padding-top: 14px;
+    padding-bottom: 13px;
   }
 
   .form__input--name {
@@ -457,7 +459,7 @@
     padding-left: 1px;
     padding-top: 0;
     padding-bottom: 0;
-    margin-bottom: 15px;
+    margin-bottom: 19px;
     color: #444444;
   }
 
@@ -497,7 +499,7 @@
 
   .form__radiobuttons {
     width: 100%;
-    padding-top: 48px;
+    padding-top: 31px;
     padding-bottom: 3px;
     padding-left: 87px;
     margin-top: 0;
@@ -581,7 +583,7 @@
 
   .form__submit {
     flex-direction: row;
-    margin-bottom: 76px;
+    margin-bottom: 73px;
   }
 
   .form__button {
@@ -589,13 +591,15 @@
     font-size: 20px;
     margin-bottom: 0;
     padding-top: 17px;
-    padding-bottom: 16px;
+    padding-bottom: 19px;
+    letter-spacing: 0;
   }
 
   .form__note {
-    margin-left: 67px;
-    margin-top: 15px;
+    margin-left: 62px;
+    margin-top: 16px;
     margin-bottom: 0;
+    letter-spacing: 0;
   }
 }
 
@@ -663,7 +667,7 @@
 
   .form__radiobuttons {
     padding-top: 32px;
-    padding-bottom: 29px;
+    padding-bottom: 32px;
     margin-bottom: 0;
   }
 
