--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -48,12 +48,11 @@
 
 .promo__img {
   margin-top: -169px;
-  margin-bottom: 1px;
+  margin-bottom: -2px;
 }
 
 @media (min-width: @tablet-width) {
   .promo {
-    width: @tablet-width;
     background-image: none;
     color: @black;
     align-items: flex-start;
@@ -111,20 +110,6 @@
 }
 
 @media (min-width: @desktop-width) {
-  .promo {
-    width: @desktop-width;
-    /*background-image: url("../img/index-background-desktop@1x.jpg");
-    background-size: 720px 696px;
-    background-position: 652px;
-    background-repeat: no-repeat;
-    margin-bottom: 80px;
-
-    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url("../img/index-background-desktop@2x.jpg");
-      background-size: 720px;
-    }*/
-  }
-
   .promo__title {
     margin-top: 200px;
     padding-left: 120px;
