--- a/source/less/blocks/total.less
+++ b/source/less/blocks/total.less
@@ -31,7 +31,7 @@
     content: "";
     width: 720px;
     height: 696px;
-    top: 4px;
+    top: 3px;
     left: 50%;
     background: url("../img/index-background-desktop@1x.jpg");
     background-size: 720px 696px;
