--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -15,3 +15,7 @@
 
 @retina-dpi: 144dpi;
 @retina-dppx: 1.5dppx;
+
+body {
+  overflow-x: hidden;
+}
